Enhance architecture, testing, documentation, and thread safety
- Add local code-review skill in .agents/skills/code-review/SKILL.md
- Add AGENTS.md and ARCHITECTURE.md documentation
- Fix thread-safe atomic updates in BookService using computeIfPresent and modern Stream.toList()
- Add OpenAPI annotations and Location header on creation in BookController
- Refactor GlobalExceptionHandler to use @RestControllerAdvice
- Add comprehensive BookServiceTest unit test suite with AssertJ
- Expand BookControllerTest coverage for all query endpoints